[tool.poetry]
name = "perfusion-artifacts"
version = "0.1.0"
description = ""
authors = ["Luis Torres <luistorres@flywheel.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.49"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
